--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/avatar.png" alt="puja's profile picture" style="width:125px;height:125px"></td>
+      <td><img src="images/Avatar.png" alt="puja's profile picture" style="width:125px;height:125px"></td>
       <td>
         <h1>Puja Thapa</h1>
         <!-- use em tag when trying to italisized and use strong tag to bold -->
