--- a/hobbies.html
+++ b/hobbies.html
@@ -34,7 +34,7 @@
         <img src="images/dog3.png" alt="Dog 3" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/bear.png" alt="Bear" style="width:75%">
+        <img src="images/Bear.png" alt="Bear" style="width:75%">
       </div>
       <div class="column">
         <img src="images/Dog2.png" alt="Dog 2" style="width:75%">
