--- a/hobbies.html
+++ b/hobbies.html
@@ -31,22 +31,22 @@
     <li>Drawing</li>
     <div class="row">
       <div class="column">
-        <img src="images/dog3.png" alt="Dog 3" style="width:75%">
+        <img src="images/dog3.PNG" alt="Dog 3" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/Bear.png" alt="Bear" style="width:75%">
+        <img src="images/Bear.PNG" alt="Bear" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/Dog2.png" alt="Dog 2" style="width:75%">
+        <img src="images/Dog2.PNG" alt="Dog 2" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/moon.png" alt="Moon" style="width:75%">
+        <img src="images/moon.PNG" alt="Moon" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/cat.png" alt="Cat" style="width:75%">
+        <img src="images/cat.PNG" alt="Cat" style="width:75%">
       </div>
       <div class="column">
-        <img src="images/max & jackie.png" alt="Max & Jackie" style="width:75%">
+        <img src="images/max & jackie.PNG" alt="Max & Jackie" style="width:75%">
       </div>
     </div>
     <li>Watching Movies
