--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li>Bachelor of Science in Health Education and Promotion, <strong> <a href="http://www.southeastern.edu/acad_research/degrees/healthedprom_bs.html">Southeastern Louisiana University </a></strong></li>
     <li>High School Diploma, <strong> <a href="https://www.sxc.edu.np/">St. Xaviers College</a></strong>
     
-<hr>
+<hr size="4" noshade align="center">
   <h3>Work Experiences</h3>
   <table cellspacing ="10">
     <thead>
@@ -50,7 +50,7 @@
       </tr>
     </tbody>
   </table>
-<hr>
+<hr size="4" noshade align="center">
   <h3>Skills</h3>
   <table cellspacing ="10">
     <tr>
@@ -88,7 +88,7 @@
       </td>
     </tr>
   </table>
-  <hr>
+  <hr size="4" noshade align="center">
 
   <strong><a href="hobbies.html">My Hobbies</a></strong>
   <br>
