--- a/index.html
+++ b/index.html
@@ -22,12 +22,17 @@
       </td>
     </tr>
   </table>
+  
   <hr>
+  
   <h3>Educations</h3>
   <ul>
     <li>Bachelor of Science in Health Education and Promotion, <strong> <a href="http://www.southeastern.edu/acad_research/degrees/healthedprom_bs.html">Southeastern Louisiana University </a></strong></li>
-    <li>High School Diploma, <strong> <a href="https://www.sxc.edu.np/">St. Xaviers College</a></strong>
+    <li>High School Diploma, <strong> <a href="https://www.sxc.edu.np/">St. Xaviers College</a></strong></li>
+  </ul>
+  
   <hr>
+      
   <h3>Work Experiences</h3>
   <table cellspacing ="10">
     <thead>
@@ -85,7 +90,9 @@
       </td>
     </tr>
   </table>
+  
   <hr>
+  
   <strong><a href="hobbies.html">My Hobbies</a></strong>
   <br>
   <strong><a href="Contact Me.html">Contact Me</a></strong>
