--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </tr>
   </table>
   
-  <hr>
+  <hr size="4" noshade align="center">
   
   <h3>Educations</h3>
   <ul>
@@ -31,7 +31,7 @@
     <li>High School Diploma, <strong> <a href="https://www.sxc.edu.np/">St. Xaviers College</a></strong></li>
   </ul>
   
-  <hr>
+  <hr size="4" noshade align="center">
       
   <h3>Work Experiences</h3>
   <table cellspacing ="10">
@@ -53,7 +53,7 @@
     </tbody>
   </table>
   
-  <hr>
+  <hr size="4" noshade align="center">
   
   <h3>Skills</h3>
   <table cellspacing ="10">
@@ -78,7 +78,7 @@
         <table>
           <tr>
             <td>Web Development</td>
-            <td>⭐︎⭐︎⭐︎</td>
+            <td>⭐︎⭐︎</td>
           </tr>
           <tr>
             <td>Sharepoint</td>
@@ -93,7 +93,7 @@
     </tr>
   </table>
   
-  <hr>
+  <hr size="4" noshade align="center">
   
   <strong><a href="hobbies.html">My Hobbies</a></strong>
   <br>
