--- a/Contact Me.html
+++ b/Contact Me.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h3>My Contact Details</h3>
-    <p> 🏠 <a href="https://www.google.com/maps?q=6703+Cedar+Lane,+Westmont+IL+60559">Address</a></p>
+    <p> 🏠 <a href="https://www.google.com/maps?q=Westmont+IL+60559">Address</a></p>
     <p> 📥 <a href= "mailto: pujatthapa@gmail.com"> Send email </a></p>
     <p>📞 <a href="tel:2259168060">Click to Call</a></p>
     <hr>
