--- a/Contact Me.html
+++ b/Contact Me.html
@@ -6,18 +6,18 @@
   </head>
   <body>
     <h3>My Contact Details</h3>
-    <p> 🏠 <a href="https://www.google.com/maps?q=Westmont+IL+60559">Address</a></p>
+    <p> 🏠 <a href="http://maps.google.com/?q=Westmont,+IL+60559>Address</a></p>
     <p> 📥 <a href= "mailto: pujatthapa@gmail.com"> Send email </a></p>
     <p>📞 <a href="tel:2259168060">Click to Call</a></p>
     <hr>
-    <form action="mailto:pujatthapa@gmail.com" method="post" enctype="text/plain">
+    <form action= "mailto:pujatthapa@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
       <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label>
       <input type="email" name="yourEmail" value=""><br>
       <label>Your Message:</label><br>
       <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-      <input type="submit">
+      <input type="submit" value="Submit">
     </form>
   </body>
 </html>
